Test commit from Netbeans

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
-    <h1></h1>
+    <h1>prueba</h1>
   </body>
 </html>
