Filters and ng-source

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     </p>
     
     <div ng-repeat="product in store.products">
-        <h1>{{product.name}}</h1>
-        <h2>${{product.price}}</h2>
+        <h1>{{product.name | uppercase}}</h1>
+        <h2>{{product.price | currency}}</h2>
         <p>{{product.description}}</p>
+        <img ng-src="{{product.images[0].full}}"/>
         <button ng-show="product.canPurchase">Add to cart</button>
     </div>
         
